Fix typer spacing, remove compiled style sheets

--- a/assets/style/_typer.scss
+++ b/assets/style/_typer.scss
@@ -1,6 +1,7 @@
 .typer {
   background: $color-gray;
   color: white;
+  display: flex;
   font-family: $font-mono;
   font-size: $font-lg;
   font-variant: normal;
@@ -14,6 +15,7 @@
 
   &__title {
     display: inline-block;
+    margin-right: $space-sm;
   }
 
   .cursor {
